Avoid visible unstyled title text on page load
- Previously, unstyled text would appear briefly then disappear before the animated text would fade in.

--- a/stylesheets/css/title.css
+++ b/stylesheets/css/title.css
@@ -1,4 +1,8 @@
 
+.anim-source {
+  opacity: 0;
+}
+
 .name span {
   position: relative;
   opacity: 0;
